--- a/GestionCantine.csproj
+++ b/GestionCantine.csproj
@@ -8,6 +8,7 @@
 
 
 	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="10.1.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.12" />
