--- a/GestionCantine.csproj
+++ b/GestionCantine.csproj
@@ -6,6 +6,13 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Data\Formulaires\**" />
+    <EmbeddedResource Remove="Data\Formulaires\**" />
+    <None Remove="Data\Formulaires\**" />
+    <Page Remove="Data\Formulaires\**" />
+  </ItemGroup>
+
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="10.1.1" />
